--- a/api/static/main.css
+++ b/api/static/main.css
@@ -296,7 +296,7 @@ header.navigation {
     header.navigation .navigation-menu-button:focus, header.navigation .navigation-menu-button:hover {
       color: white; }
   header.navigation nav {
-    float: none;
+    float: right;
     min-height: 60px;
     z-index: 9999999; }
     @media screen and (min-width: 53.75em) {
@@ -305,7 +305,6 @@ header.navigation {
   header.navigation ul.navigation-menu {
     clear: both;
     display: none;
-    margin: 0 auto;
     overflow: visible;
     padding: 0;
     width: 100%;
@@ -315,7 +314,7 @@ header.navigation {
     @media screen and (min-width: 53.75em) {
       header.navigation ul.navigation-menu {
         display: inline;
-        margin: 0;
+        margin-left: 800px;
         padding: 0; } }
   header.navigation ul li.nav-link {
     background: #333;
